style.css
body {
    font-size: 100%;
    font-family: sans-serif;
    background-color: #000;
}

canvas {
    background-color: #000;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    width: 100%;
    height: 100%;
}

#canvas-panel {
    position: relative;
    height: 100%;
}

#body {
    position: absolute;
    top: 0;
    left: 250px;
    bottom: 0;
    right: 0;
    background-color: #000;
    -moz-transition: left 0.5s ease;
    transition: left 0.5s ease;
}

#container {
    color: #FFF;
    background-color: rgba(0, 160, 230, 0.1);
    text-align: center;
    position: absolute;
    bottom: 0;
    width: 100%;
}

footer, footer a {
    color: #FFF;
    text-align: right;
}

#thumbnail, #details {
    display: inline-block;
}

#thumbnail {
    width: 100px;
    height: 100px;
}

#details {
    text-align: left;
}

#toggle-form-btn  {
    background-color: rgba(0, 160, 230, 0.05);
    margin: 0;
    border-color: transparent;
    color: #FFF;
    width: 100%;
}

#notifications {
    width: 100%;
    background-color: rgba(0, 160, 230, 0.1);
    margin: auto;
}

#notifications .message {
    text-align: center;
    color: #FFF;
}

#sidebar {
    width: 250px;
    background-color: rgba(0, 160, 230, 0.1);
    color: #FFF;
    position: absolute;
    top: 0;
    left: 0;
    bottom: 0;
}

.track {
    border-bottom: 1px solid rgba(0, 160, 230, 0.1);
    position: relative;
}

.track:hover {
    background-color: rgba(0, 160, 230, 0.1);
}

.track-url {
    display: none;
}

input#toggle-sidebar {
    display: none;
}

label[for="toggle-sidebar"] {
    position: absolute;
    background-color: rgba(0, 160, 230, 0.25);
    border-color: transparent;
    color: #FFF;
    left: 250px;
    z-index: 1;
    padding: 2px;
    -moz-transition: left 0.5s ease;
    transition: left 0.5s ease;
}

input#toggle-sidebar:checked ~ label {
    left: 0;
}

input#toggle-sidebar:checked ~ #body {
    left: 0;
}

.delete-button {
    background-color: rgba(0, 160, 230, 0.1);
    border-radius: 25%;
    padding: 5px 10px;
    position: absolute;
    right: 5px;
    top: 5px;
}

.delete-button:before {
    content: "x";
}

.delete-button:hover {
    background-color: rgba(0, 160, 230, 0.1);
}

